2012-02-09  Ramon Novoa  <rnovoa@artica.es>

	* operation/events/events_list.php: Removed short tags.

2012-02-09  Ramon Novoa  <rnovoa@artica.es>

	* godmode/events/custom_events.php: Aesthetic fixes.

2012-02-09 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/events/events_list.php: Now id_group and id_name it's 
	keeped when pagination is used in this view.

2012-02-09 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/events/events_list.php: Now toogle filter is not hide
	when pagination is used in thie view.

2012-02-09  Vanessa Gil  <vanessa.gil@artica.es>
	* godmode/agentes/module_manager_editor_common.php: Fixed behavior combo
	tag selected.

2012-02-09  Vanessa Gil  <vanessa.gil@artica.es>
	* godmode/events/custom_events.php: Changed combo box update.

2012-02-08  Vanessa Gil  <vanessa.gil@artica.es>
	* godmode/events/custom_events.php: Added default fields button.

2012-02-08  Vanessa Gil  <vanessa.gil@artica.es>
	* pandoradb.sql
	  pandoradb.postgreSQL.sql
	  pandoradb.oracle.sql
	  extras/pandoradb_migrate_4.0.x_to_4.1.mysql.sql
	  extras/pandoradb_migrate_4.0.x_to_4.1.oracle.sql
	  extras/pandoradb_migrate_4.0.x_to_4.1.postgreSQL.sql: Removed 'criticity_alert'
	to tevento table.
 
	 * godmode/events/custom_events.php: Modify fields selection to
	show events.

2012-02-08  Miguel de Dios  <miguel.dedios@artica.es>
	
	* operation/agentes/alerts_status.php: added a check for user ACL groups in
	the list of alerts.
	
	Fixes: #3484959

2012-02-08 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/events/custom_events.php: Changed 'sec' link parameter
	in this view.

2012-02-08 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
	
	* images/skin/skin_default/include/styles/menu.css
	 include/styles/menu.css: Added godmode events icon in menu.

	* include/functions_events.php: Added functions to support custom 
	event filters. 

	* pandoradb.sql
	 pandoradb.postgreSQL.sql
	 pandoradb.oracle.sql